# agent-sortmyemails

./: .gitignore  README.md  pyproject.toml
agent-sortmyemails/: main.py
agent-sortmyemails/helper_scripts/: authenticate.py  categorize.py  fetch_emails.py  gmail_labels.py
tests/: test_categorize.py  test_gmail_utils.py
